--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -222,7 +222,7 @@ select.edSelect{
   border:thin solid #FFF;
 }
 
-#content td{
+.content td{
   font-weight:500;
   margin-bottom:3px;
   padding:1%;
@@ -241,6 +241,17 @@ option{
   outline:0;
   border:none;
 }
+
+input.totalMarks{
+  color:#FFF;
+  font-weight:bold;
+  border:none;
+  background:none;
+  border:thin #FFF solid;
+  padding:2px;
+  text-align:center;
+
+}	
 
 @media only screen and (min-width:150px) and (max-width:500px){
   #scoreUpdate{
