--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -295,6 +295,15 @@ input.totalMarks{
   padding:2.5%;
 }
 
+.assessmentInput{
+  width:95% !important;
+  padding:0 2.5% !important;
+  background: #FFF !important;
+  border:thin #CCC solid !important;
+  outline: none;
+}
+
+
 @media only screen and (min-width:150px) and (max-width:500px){
   #scoreUpdate{
     width:95%;
