--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -303,6 +303,16 @@ input.totalMarks{
   outline: none;
 }
 
+#fixed-top-div{
+  padding: 10px;
+  background: #FFF;
+  position: absolute;
+  position: fixed;
+  top:60px;
+  left: 0;
+  z-index: 50;
+  box-shadow: #CCC 0 0 5px;
+}
 
 @media only screen and (min-width:150px) and (max-width:500px){
   #scoreUpdate{
