--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -319,7 +319,7 @@ input.totalMarks{
     width:95%;
     margin:auto;
     margin-top:20px;
-    color:#FFF;  
+    color:#333132;  
   }
   
   #scoreUpdate table{
