--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -438,3 +438,12 @@ input.totalMarks{
   
  
 }
+
+.cover{
+  position: absolute;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  z-index: 1000;
+  background: RGBA(255,255,255,0.6) url(../img/ajax-loader.gif) no-repeat center;
+}
